--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,14 @@ jobs:
           name: Deploy docker container to correct server for each envoirnment
           command: |
             if [ $CIRCLE_BRANCH = 'staging' ]; then 
+            echo $DOCKER_ORG/$IMAGE_NAME:$TAG
             ssh -o StrictHostKeyChecking=no ${STAGING_SSH_USER}@${STAGING_IP} "/bin/bash ~/deploy/docker-kong.sh $DOCKER_ORG/$IMAGE_NAME:$TAG $IMAGE_NAME $DOCKER_LOGIN $DOCKER_PWD"
             fi
             if [ $CIRCLE_BRANCH = 'production' ]; then
+            echo $DOCKER_ORG/$IMAGE_NAME:$TAG
             ssh -o StrictHostKeyChecking=no ${PRODUCTION_SSH_USER}@${PRODUCTION_IP} "/bin/bash ~/deploy/docker-kong.sh $DOCKER_ORG/$IMAGE_NAME:$TAG $IMAGE_NAME $DOCKER_LOGIN $DOCKER_PWD"
             fi
             if [ $CIRCLE_BRANCH = 'master' ]; then
+            echo $DOCKER_ORG/$IMAGE_NAME:$TAG
             ssh -o StrictHostKeyChecking=no ${PRODUCTION_SSH_USER}@${PRODUCTION_IP} "/bin/bash ~/deploy/docker-kong.sh $DOCKER_ORG/$IMAGE_NAME:$TAG $IMAGE_NAME $DOCKER_LOGIN $DOCKER_PWD"
             fi
