--- a/kong.yml
+++ b/kong.yml
@@ -3,9 +3,13 @@ _format_version: "1.1"
 hosts:
 
 service:
-- name: my-service
+- name: core-api
   url: http://localhost:3000
   routes:
-  - name: my-route
+  - name: hello-aword
     paths:
-    - /
+    - /hello
+    strip-path : false
+    hosts : 
+    - master.api.sabza.pk
+    - api.sabza.pk
