--- a/kong.yml
+++ b/kong.yml
@@ -1,14 +1,9 @@
 _format_version: "1.1"
 
-hosts:
-
-service:
-- name: core-api
+services:
+- name: my-service
   url: http://localhost:3000
   routes:
-  - name: api-helloworld
+  - name: my-route
     paths:
     - /
-    strip-path : false
-    hosts : 
-    - api.sabza.pk
