--- a/kong.yml
+++ b/kong.yml
@@ -3,6 +3,8 @@ _format_version: "1.1"
 services:
 - name: my-service
 url: http://localhost:3000
+upstream_url: http://localhost:3000
+uris: my-service
 routes:
 - name: my-route
 paths:
