--- a/kong.yml
+++ b/kong.yml
@@ -15,6 +15,17 @@ _format_version: "1.1"
 # can be listed in the top-level as an array of objects:
 host:
 services:
+- name: sabza-test-service
+  url: http://localhost:5100
+  tags:
+    - core-api
+    # Entities that have a foreign-key relationship can be nested:
+    routes:
+    - name: sabza-test-routes
+      paths:
+      - /
+
+
 - name: core-api-service
   url: http://localhost:3000
   # Entities can store tags as metadata
