Kong | Branch: master | Action: Change to yml: added sabza-test url

--- a/kong.yml
+++ b/kong.yml
@@ -21,6 +21,9 @@ services:
   - name: sabza-test-routes
     paths:
     - /
+    strip_path : false
+    hosts : 
+    - api.sabza.pk
 
 
 # - name: core-api-service
