--- a/kong.yml
+++ b/kong.yml
@@ -15,8 +15,6 @@ _format_version: "1.1"
 services:
 - name: sabza-test-service
   url: http://localhost:5100
-  tags:
-    - sabza-test
   routes:
   - name: sabza-test-routes
     paths:
@@ -24,6 +22,7 @@ services:
     strip_path : false
     hosts : 
     - api.sabza.pk
+services:
 - name: sabza-admin-service
   url: http://localhost:3100
   tags:
