--- a/kong.yml
+++ b/kong.yml
@@ -13,22 +13,25 @@ _format_version: "1.1"
 
 
 services:
-- name: sabza-test-service
+- name: core-api
   url: http://localhost:5100
   routes:
   - name: sabza-test-routes
     paths:
     - / 
-    strip_path : false    
-- name: sabza-admin-service
-  url: http://localhost:3100
-  tags:
-    - sabza-admin
-  routes:
-  - name: sabza-admin-routes
-    paths:
-    - /
-    strip_path : false
+    strip_path : false 
+    hosts:
+    - api.sabza.pk
+
+# - name: sabza-admin-service
+#   url: http://localhost:3100
+#   tags:
+#     - sabza-admin
+#   routes:
+#   - name: sabza-admin-routes
+#     paths:
+#     - /
+#     strip_path : false
 
 
 
